--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <span class="dropdown-arrow">▼</span>
       <div id="user-dropdown" class="dropdown-content">
           <div class="dropdown-item" onclick="openEditProfile()">✏️ Edit Profile</div>
+          <div id="menu-reports" class="dropdown-item" onclick="openReportsModal()">📊 Reports</div>
           <div id="menu-master-data" class="dropdown-item" onclick="openSettings()" style="display:none;">⚙️ Master Data</div>
           <div class="dropdown-divider"></div>
           <div class="dropdown-item logout-item" onclick="logoutUser()">🚪 Logout</div>
@@ -68,10 +69,12 @@
       <div class="chat-header">
         <div style="display:flex; align-items:center;">
             <button id="back-btn" onclick="closeChat()">←</button>
+            
             <div class="header-img-container">
                 <img id="header-pl-img" src="https://via.placeholder.com/40?text=PL" class="header-pl-avatar" onclick="viewChannelDetails()" title="View Info">
                 <button class="edit-dp-btn" onclick="triggerDPUpload()" title="Change Photo">📷</button>
             </div>
+            
             <div style="flex:1; overflow:hidden; margin-left:5px;">
                 <h2 id="selected-pl-title" style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">Select a PL</h2>
                 <div style="display:flex; align-items:center;">
@@ -79,6 +82,8 @@
                     <span id="selected-pl-status" class="header-status"></span>
                 </div>
             </div>
+
+            <button id="export-chat-btn" onclick="exportChannelChat()" title="Download Chat History" style="margin-left:10px; background:none; border:none; font-size:18px; cursor:pointer;">📥</button>
         </div>
       </div>
 
@@ -113,6 +118,21 @@
   </div>
 
   <datalist id="pos-list"></datalist>
+
+  <div id="reports-modal" class="modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h3>📊 Reports Center</h3>
+            <span class="close-btn" onclick="closeReportsModal()">&times;</span>
+        </div>
+        <div class="manage-section">
+            <h4 style="margin-top:0;">Global Status Report</h4>
+            <p style="font-size:12px; color:#666;">Export a complete list of all PLs, their current status, suppliers, and recent activity.</p>
+            <button onclick="downloadAllPLReport()" class="csv-btn" style="background:#008069;">📥 Download All PLs Report (CSV)</button>
+            <p id="report-status" style="font-size:11px; color:#008069; margin-top:5px;"></p>
+        </div>
+    </div>
+  </div>
 
   <div id="settings-modal" class="modal">
     <div class="modal-content">
