--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <button id="back-btn" onclick="closeChat()">←</button>
             
             <div class="header-img-container">
-                <img id="header-pl-img" src="https://via.placeholder.com/40?text=PL" class="header-pl-avatar" onclick="viewChannelDetails()" title="View Info">
+                <img id="header-pl-img" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%3E%3Crect%20width%3D%22100%25%22%20height%3D%22100%25%22%20fill%3D%22%23e0e0e0%22%2F%3E%3Ctext%20x%3D%2250%25%22%20y%3D%2250%25%22%20font-family%3D%22sans-serif%22%20font-size%3D%2235%22%20fill%3D%22%23888%22%20dy%3D%22.3em%22%20text-anchor%3D%22middle%22%3EPL%3C%2Ftext%3E%3C%2Fsvg%3E" class="header-pl-avatar" onclick="viewChannelDetails()" title="View Info">
                 <button class="edit-dp-btn" onclick="triggerDPUpload()" title="Change Photo">📷</button>
             </div>
             
